# cerberus

./: .editorconfig  .prettierignore  .prettierrc  Cargo.toml  bun.lockb  package.json  shell.nix  svelte.config.js  tailwind.config.ts  vite.config.js
crates/cerberus/: Cargo.toml
crates/cerberus-cli/: Cargo.toml
crates/cerberus-cli/src/: main.rs
crates/cerberus-crypto/: Cargo.toml
crates/cerberus-crypto/src/: base64.rs  kdf.rs  lib.rs  mac.rs  secret.rs  symmetric.rs
crates/cerberus-daemon/: Cargo.toml
crates/cerberus-daemon/src/: lib.rs  main.rs  server.rs
crates/cerberus-macros/: Cargo.toml
crates/cerberus-macros/src/: lib.rs
crates/cerberus-macros/tests/: update_hmac.rs  verify_hmac.rs
crates/cerberus-secret/: Cargo.toml
crates/cerberus-secret/src/: lib.rs
crates/cerberus-serde/: Cargo.toml
crates/cerberus-serde/src/: lib.rs
crates/cerberus-store/: Cargo.toml
crates/cerberus-store/migrations/: 20241105132032_create_initial_tables.sql
crates/cerberus-store/src/: crypto.rs  database.rs  encrypted_data.rs  item.rs  lib.rs  nonce_counter.rs  store.rs  symmetric_key.rs  vault.rs
crates/cerberus-store/src/crypto/: encrypted_key.rs  secure_key.rs  symmetric_key.rs
crates/cerberus-store/src/database/: record_types.rs
crates/cerberus-store/tests/: store_tests.rs
crates/cerberus-tauri/: Cargo.toml  tauri.conf.json
crates/cerberus-tauri/capabilities/: default.json
crates/cerberus-tauri/src/: lib.rs
crates/cerberus/src/: main.rs  what.json
crates/cerberus_core/: Cargo.toml  README.md
crates/cerberus_core/src/: crypto.rs  lib.rs  main.rs  primitive.rs  secret.rs  vault.rs
crates/cerberus_core/src/crypto/: mod.rs
crates/cerberus_core/src/crypto/hmac/: mod.rs
crates/cerberus_core/src/crypto/key/: encrypted_key.rs  encrypted_key_pair.rs  key.rs  key_pair.rs  mod.rs
crates/cerberus_core/src/crypto/keys/: encrypted_key.rs  encrypted_key_pair.rs  key.rs  key_pair.rs  mod.rs  oldmod.rs
crates/cerberus_core/src/store/: mod.rs
src/: app.css
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/lib/components/: VaultItem.svelte
src/routes/: +page.svelte  +page.ts
src/routes/onboarding/: +page.svelte  OnboardingEnterMasterPassword.svelte  OnboardingSelectDirectory.svelte
