[workspace]
members = [
  "crates/cerberus-cli",
  "crates/cerberus-daemon",
  "crates/cerberus-store",
  "crates/cerberus-tauri",
]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "net"] }

cerberus-store = { path = "crates/cerberus-store" }
cerberus-daemon = { path = "crates/cerberus-daemon" }

[profile.dev.package.sqlx-macros]
opt-level = 3
