[workspace]
members = [
  "crates/cerberus-cli",
  "crates/cerberus-daemon",
  "crates/cerberus-store",
  "crates/cerberus-tauri",
  "crates/cerberus-crypto",
]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros", "net", "fs", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

cerberus-store = { path = "crates/cerberus-store" }
cerberus-daemon = { path = "crates/cerberus-daemon" }
cerberus-crypto = { path = "crates/cerbuers-crypto" }

[profile.dev.package.sqlx-macros]
opt-level = 3
