[package]
name = "cerberus-store"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
rand = "0.8.5"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "derive", "macros", "migrate"] }

thiserror.workspace = true
