[package]
name = "cerberus-store"
version = "0.1.0"
edition.workspace = true

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
chrono = { version = "0.4.39", features = ["serde"] }
rand = "0.8.5"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite", "derive", "macros", "migrate", "chrono", "json"] }

thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
