[package]
name = "cerberus_core"
version = "0.1.0"
edition = "2021"
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.2", features = ["std"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
hkdf = { version = "0.12.3", features = ["std"] }
hmac = { version = "0.12.1", features = ["std"] }
rand = "0.8.5"
serde = "1.0.189"
sha2 = { version = "0.10.8", features = ["std"] }
thiserror = "1.0.49"
